# learning-langchain

./: .env.example  compose.yml
src/: Dockerfile  pyproject.toml
src/core/: main.py
src/core/commands/: chat_bot.py  classification.py  extraction.py  semantic_search.py  translator.py
