[project]
name = "Learning-LangChain"
description = "Let's learn LangChain"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "restX98" },
]
dependencies = [
    "debugpy==1.8.14",
    "langchain==0.3.25",
    "langchain[openai]==0.3.25",
    "langchain-core==0.3.59",
    "langchain-openai==0.3.16",
    "langgraph==0.4.5",
    "langchain-community==0.3.24",
    "pypdf==5.5.0",
    "langchain-openai==0.3.16",
]

[tool.coverage.run]
source = ["core"]

[tool.pylint]
max-line-length = 180
